PG, PrimaryLogPG: trim log and rollback info for error log entries

Regular updates piggyback some osd state for this purpose with
MOSDRepOp[Reply]. Do the same thing for pure log entry updates (write
errors and lost/revert additions) via MOSDPGUpdateLogMissing[Reply].

Fixes: http://tracker.ceph.com/issues/22050
Signed-off-by: Josh Durgin <jdurgin@redhat.com>
(cherry picked from commit b50186bfe6c8981700e33c8a62850e21779d67d5)

Conflicts:
	qa/standalone/osd/repro_long_log.sh
	src/messages/MOSDPGUpdateLogMissing.h
	src/messages/MOSDPGUpdateLogMissingReply.h
trival, encode/decode not namespaced